--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,4 +1,4 @@
-<% breadcrumb :album, @album, cheap: true %>
+<% breadcrumb :album, @album %>
 
 <div class="page-header">
   <h1><%= @album.title %></h1>
