--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     </ul>
 
     <%= form_tag search_path, method: :get, class: 'navbar-form navbar-right' do %>
-      <% text_field_tag 'q', nil, placeholder: 'Search' %>
+      <%= text_field_tag 'q', nil, placeholder: 'Search' %>
     <% end %>
   </div>
 </div>
